--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
+<meta name ="viewport" content="width=device-width, initial-scale=1">
 <head>
     <title>Angular 2 QuickStart</title>
     <meta charset="UTF-8">
@@ -19,6 +20,14 @@
 </head>
 <!-- 3. Display the application -->
 <body>
+<h1> Brunel Sailing </h1>
+<div class="Navigation"><a href="index.html">Home</a> </div>
+<div class="Navigation"><a href="about.html">About</a> </div>
+<div class="Navigation"><a href="events.html">Events</a> </div>
+<div class="Navigation"><a href="competitions.html">Competitions</a> </div>
+<div class="Navigation"><a href="gallery.html">Gallery</a> </div>
+<div class="Navigation"><a href="join.html">Join</a> </div>
+
 <my-app>Loading...</my-app>
 </body>
 </html>
