added header image removed title fixed navbar

--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
 </head>
 <!-- 3. Display the application -->
 <body>
-<h1> Brunel Sailing </h1>
-<div class="Navigation"><a href="index.html">Home</a> </div>
-<div class="Navigation"><a href="about.html">About</a> </div>
-<div class="Navigation"><a href="events.html">Events</a> </div>
-<div class="Navigation"><a href="competitions.html">Competitions</a> </div>
-<div class="Navigation"><a href="gallery.html">Gallery</a> </div>
-<div class="Navigation"><a href="join.html">Join</a> </div>
-
+<image src="/resources/banner.png"></image>
+<div id="Navigation">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="competitions.html">Competitions</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="join.html">Join</a></li>
+    </ul>
+</div>
+<!--TODO add news and sidebar with float-->
 <my-app>Loading...</my-app>
 </body>
 </html>
