changed colour of navbar text and hover added current page highlight

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta name ="viewport" content="width=device-width, initial-scale=1">
 <head>
     <title>Angular 2 QuickStart</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -23,15 +24,19 @@
 <image src="/resources/banner.png"></image>
 <div id="Navigation">
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="competitions.html">Competitions</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="join.html">Join</a></li>
+        <li style="float:right"><a href="loginreg.html">Login/Register</a></li>
     </ul>
 </div>
 <!--TODO add news and sidebar with float-->
+<div id="News">
+
+</div>
 <my-app>Loading...</my-app>
 </body>
 </html>
